--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3.5'
+version: '2.2'
 
 services:
   postgres:
     image: hammermc/nominatim-docker
     restart: always
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
-    environment:
-      - POSTGRES_PASSWORD=supersecret
+    env_file:
+      - osm.env
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf
@@ -19,15 +19,14 @@ services:
     restart: "no"
     depends_on:
       - postgres
+    env_file:
+      - osm.env
     environment:
-      - POSTGRES_PASSWORD=supersecret
-      - OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
-      - OSM2PGSQLCACHE=20000 #20gigs used only during init
       - REDOWNLOAD
       - REINITDB
       - http_proxy
       - https_proxy
-    command: initdb
+    command: renderd-initdb
     volumes:
       - data:/data
     tmpfs:
@@ -39,14 +38,15 @@ services:
     restart: always
     depends_on:
       - postgres
+    env_file:
+      - osm.env
     environment:
-      - POSTGRES_PASSWORD=supersecret
-      - OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
       - http_proxy
       - https_proxy
     command: renderd
     volumes:
       - data:/data
+      - ./renderd/renderd.conf:/etc/renderd.conf
     tmpfs:
       - /run
       - /tmp
@@ -54,19 +54,21 @@ services:
   renderd-apache:
     image: hammermc/renderd-docker
     restart: always
+    env_file:
+      - osm.env
     environment:
       - http_proxy
       - https_proxy
     depends_on:
       - renderd
-    command: apache2
+    command: renderd-apache2
     volumes:
       - data:/data
+      - ./renderd/renderd.conf:/etc/renderd.conf
+      - ./renderd-apache/tileserver_site.conf:/etc/apache2/sites-available/tileserver_site.conf
     tmpfs:
       - /run
       - /tmp
-    ports:
-      - 8000:80
 
   osrm-backend:
     image: osrm/osrm-backend
@@ -74,6 +76,8 @@ services:
 #    to run osrm-routed with different options to the default, use (eg)
 #   command: osrm-routed.sh su-exec osrm osrm-routed -t "$NPROCS" --algorithm mld /data/profile/"$PROFILE_DIR"/"$OSM_OSRM"
     command: osrm-routed.sh
+    env_file:
+      - osm.env
     environment:
       - http_proxy
       - https_proxy
@@ -81,6 +85,7 @@ services:
       - PROFILE
     depends_on:
       - postgres
+      - renderd
     volumes:
       - data:/data
       - ./osrm-backend/osrm-routed.sh:/usr/local/bin/osrm-routed.sh
@@ -92,14 +97,11 @@ services:
     image: osrm/osrm-frontend
     restart: always
     command: osrm-frontend.sh
+    env_file:
+      - osm.env
     environment:
       - http_proxy
       - https_proxy
-      - OSRM_BACKEND
-      - OSRM_CENTER
-      - OSRM_ZOOM
-      - OSRM_LANGUAGE
-      - OSRM_LABEL
     depends_on:
       - osrm-backend
     volumes:
@@ -114,6 +116,8 @@ services:
 
   vroom:
     image: hammermc/vroom-docker
+    env_file:
+      - osm.env
     environment:
       - http_proxy
       - https_proxy
@@ -125,8 +129,9 @@ services:
   nominatim-apache:
     image: hammermc/nominatim-docker
     restart: always
+    env_file:
+      - osm.env
     environment:
-      - POSTGRES_PASSWORD=supersecret
       - http_proxy
       - https_proxy
     command: apache2
@@ -148,10 +153,9 @@ services:
     image: hammermc/nominatim-docker
     restart: "no"
     command: initdb
+    env_file:
+      - osm.env
     environment:
-      - POSTGRES_PASSWORD=supersecret
-      - OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
-      - OSM2PGSQLCACHE=20000 #20gigs used only during init
       - REDOWNLOAD
       - REINITDB
       - http_proxy
@@ -171,7 +175,7 @@ services:
      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     command: nginx -g 'daemon off;'
     ports:
-     - 80:80
+     - 8000:80
     tmpfs:
       - /tmp
       - /run
@@ -179,6 +183,7 @@ services:
       - osrm-frontend
       - osrm-backend
       - nominatim-apache
+      - vroom
 
 volumes:
   data:
