--- a/renderd-apache/tileserver_site.conf
+++ b/renderd-apache/tileserver_site.conf
@@ -4,13 +4,13 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
 
-    ServerName localhost
+    ServerName renderd.internal.kkts.com.au
     ServerAlias *
     DocumentRoot /var/www
 
-	###
-	###    
-	# increase the log level for more detailed information
+    ###
+    ###
+    # increase the log level for more detailed information
     LogLevel info
 
 # You can manually configure each tile set with AddTileConfig or AddTileMimeConfig.
@@ -40,10 +40,10 @@
     ModTileMissingRequestTimeout 120
 
 # If tile is out of date, don't re-render it if past this load threshold (users gets old tile)
-    ModTileMaxLoadOld 2
+    ModTileMaxLoadOld 16
 
 # If tile is missing, don't render it if past this load threshold (user gets 404 error)
-    ModTileMaxLoadMissing 5
+    ModTileMaxLoadMissing 32
 
 # Socket where we connect to the rendering daemon
     ModTileRenderdSocketAddr renderd 7653
@@ -80,17 +80,17 @@
 
 # Upper bound on the length a tile will be set cacheable, which takes
 # precedence over other settings of cacheing
-ModTileCacheDurationMax 604800
+ModTileCacheDurationMax 1209600
 
 # Sets the time tiles can be cached for that are known to by outdated and have been
 # sent to renderd to be rerendered. This should be set to a value corresponding
 # roughly to how long it will take renderd to get through its queue. There is an additional
 # fuzz factor on top of this to not have all tiles expire at the same time
-ModTileCacheDurationDirty 900
+ModTileCacheDurationDirty 1800
 
 # Specify the minimum time mod_tile will set the cache expiry to for fresh tiles. There
 # is an additional fuzz factor of between 0 and 3 hours on top of this.
-ModTileCacheDurationMinimum 10800
+ModTileCacheDurationMinimum 604800
 
 # Lower zoom levels are less likely to change noticeable, so these could be cached for longer
 # without users noticing much.
@@ -98,17 +98,17 @@ ModTileCacheDurationMinimum 10800
 # cacheing times can be specified.
 
 #Specify the zoom level below  which Medium starts and the time in seconds for which they can be cached
-ModTileCacheDurationMediumZoom 13 86400
+ModTileCacheDurationMediumZoom 13 604800
 
 #Specify the zoom level below which Low starts and the time in seconds for which they can be cached
-ModTileCacheDurationLowZoom 9 518400
+ModTileCacheDurationLowZoom 9 604800
 
 # A further heuristic to determine cacheing times is when was the last time a tile has changed.
 # If it hasn't changed for a while, it is less likely to change in the immediate future, so the
 # tiles can be cached for longer.
 # For example, if the factor is 0.20 and the tile hasn't changed in the last 5 days, it can be cached
 # for up to one day without having to re-validate.
-ModTileCacheLastModifiedFactor 0.20
+ModTileCacheLastModifiedFactor 0.90
 
 ## Tile Throttling
 ## Tile scrappers can often download large numbers of tiles and overly staining tileserver resources
@@ -128,28 +128,28 @@ ModTileEnableTileThrottling Off
 ModTileEnableTileThrottlingXForward 0
 
 ## Parameters (poolsize in tiles and topup rate in tiles per second) for throttling tile serving. 
-ModTileThrottlingTiles 10000 1 
+ModTileThrottlingTiles 100 10
 ## Parameters (poolsize in tiles and topup rate in tiles per second) for throttling render requests. 
-ModTileThrottlingRenders 128 0.2
+ModTileThrottlingRenders 2 1
 
         <Directory />
-		Options FollowSymLinks
-		AllowOverride None
-	</Directory>
-	<Directory /var/www/>
-		Options Indexes FollowSymLinks MultiViews
-		AllowOverride None
-		Order allow,deny
-		allow from all
-	</Directory>
+        Options FollowSymLinks
+        AllowOverride None
+    </Directory>
+    <Directory /var/www/>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride None
+        Order allow,deny
+        allow from all
+    </Directory>
 
-	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
-	<Directory "/usr/lib/cgi-bin">
-		AllowOverride None
-		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-		Order allow,deny
-		Allow from all
-	</Directory>
+    ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
+    <Directory "/usr/lib/cgi-bin">
+        AllowOverride None
+        Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+        Order allow,deny
+        Allow from all
+    </Directory>
 
     Alias /doc/ "/usr/share/doc/"
     <Directory "/usr/share/doc/">
@@ -161,4 +161,3 @@ ModTileThrottlingRenders 128 0.2
     </Directory>
 
 </VirtualHost>
-
