clean up some local config changes that shouldn't have been commited

--- a/renderd-apache/tileserver_site.conf
+++ b/renderd-apache/tileserver_site.conf
@@ -2,9 +2,9 @@
 # through mod_tile
 
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
+    ServerAdmin webmaster@maps.localnet
 
-    ServerName renderd.internal.kkts.com.au
+    ServerName maps.localnet
     ServerAlias *
     DocumentRoot /var/www
 
