--- a/osm.env
+++ b/osm.env
@@ -1,3 +1,4 @@
+DATADIR=/data
 POSTGRES_PASSWORD=supersecret
 OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
 OSM2PGSQLCACHE=20000 #2gigs used only during init
