--- a/osm.env
+++ b/osm.env
@@ -1,7 +1,7 @@
 POSTGRES_PASSWORD=supersecret
 OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
 OSM_PBF_UPDATE_URL=http://download.geofabrik.de/australia-oceania/australia-updates
-OSM2PGSQLCACHE=2000 #2gigs used only during init
+OSM2PGSQLCACHE=2000
 POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=gis
