--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.2'
 
 services:
   postgres:
-    image: hammermc/renderd-docker
+    image: hammermc/nominatim-docker
     restart: always
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
     env_file:
