add osm-config.sh to nominatim-initdb and nominatim-updatedb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,6 +204,7 @@ services:
     volumes:
       - data:/data
       - run:/run
+      - ./osm-config.sh:/usr/local/etc/osm-config.sh
     tmpfs:
       - /tmp
 
@@ -219,6 +220,7 @@ services:
     volumes:
       - data:/data
       - run:/run
+      - ./osm-config.sh:/usr/local/etc/osm-config.sh
     tmpfs:
       - /tmp
 
