--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,11 +11,15 @@ server {
 	}
 
 	location /vroom {
-		proxy_pass                 http://osrm-backend:3000/;
+		proxy_pass                 http://vroom:3000/;
 	}
 
 	location /osm_tiles {
 		proxy_pass                 http://renderd-apache;
+	}
+
+	location /nominatim {
+		proxy_pass                 http://nominatim-apache;
 	}
 
 	location / {
@@ -57,18 +61,18 @@ server {
 
 }
 
-upstream nominatim {
-    server nominatim-apache;
-}
-
-server {
-    listen       80;
-	server_name  nominatim.maps.localnet;
-
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log debug;
-
-	location / {
-		proxy_pass http://nominatim;
-	}
-}
+# upstream nominatim {
+#     server nominatim-apache;
+# }
+# 
+# server {
+#     listen       80;
+# 	server_name  nominatim.maps.localnet;
+# 
+#     access_log  /var/log/nginx/access.log;
+#     error_log   /var/log/nginx/error.log debug;
+# 
+# 	location / {
+# 		proxy_pass http://nominatim;
+# 	}
+# }
