--- a/nominatim-apache/000-default.conf
+++ b/nominatim-apache/000-default.conf
@@ -8,4 +8,5 @@
         DirectoryIndex search.php
         Require all granted
     </Directory>
+    Alias /nominatim /Nominatim/build/website
 </VirtualHost>
