--- a/renderd/renderd.conf
+++ b/renderd/renderd.conf
@@ -6,7 +6,7 @@ tile_dir=/data/var/lib/mod_tile
 stats_file=/data/var/run/renderd/renderd.stats
 
 [mapnik]
-plugins_dir=/usr/local/lib/mapnik/input
+plugins_dir=/usr/lib/mapnik/3.0/input/
 font_dir=/usr/share/fonts/truetype
 font_dir_recurse=1
 
