--- a/docker-compose-no-nominatim.yml
+++ b/docker-compose-no-nominatim.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   postgres:
-    image: hammermc/nominatim-docker
+    image: postgis/postgis:12-master
     restart: always
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
     env_file:
