use nominatim.opentreetmap.org for the docker-compose-no-nominatim.yml

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,7 @@ server {
 
 	location /nominatim {
 		proxy_pass                 http://nominatim-apache;
+		# proxy_pass http://nominatim.openstreetmap.org/
 	}
 
 	location / {
