--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -5,6 +5,7 @@ services:
     image: hammermc/nominatim-docker:13
     restart: always
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
+    stop_grace_period: 2m
     env_file:
       - osm.env
     volumes:
@@ -91,7 +92,7 @@ services:
     volumes:
       - data:/data
       - ./renderd/renderd.conf:/etc/renderd.conf
-      - ./renderd-apache/tileserver_site.conf:/etc/apache2/sites-available/tileserver_site.conf
+      - ./renderd-apache/tileserver_site.conf:/etc/apache2/sites-enabled/renderd.conf
       - ./osm-config.sh:/usr/local/etc/osm-config.sh
     tmpfs:
       - /run
